app/src/db/repositories/niveau_liste/snapshots/anki_sentences__db__repositories__niveau_worte__niveau_worte_test__test_niveau_worte_repo__bulk_insert__run_bulk_insert_update_scenario-4.snap
---
source: app/src/db/repositories/niveau_worte/niveau_worte_test.rs
expression: res_2
---
[
    Snapshot {
        id: 1,
        niveau: "C1",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    Snapshot {
        id: 2,
        niveau: "C2",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
]
